usunięcie deklaracji throw, dodanie writera, metoda pushBack vectora teraz jest metodą szablonową, ponieważ wcześniej przyjmowała double, a była instancjalizowana dla wektora intów

--- a/cpp/msvc/emd.vcxproj
+++ b/cpp/msvc/emd.vcxproj
@@ -88,12 +88,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\DataReader.cpp" />
+    <ClCompile Include="..\DataWriter.cpp" />
     <ClCompile Include="..\emd.cpp" />
     <ClCompile Include="..\helpers\diff.cpp" />
     <ClCompile Include="..\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\DataReader.h" />
+    <ClInclude Include="..\DataWriter.h" />
     <ClInclude Include="..\emd.h" />
     <ClInclude Include="..\helpers\diff.h" />
     <ClInclude Include="..\helpers\Vector.h" />
