--- a/cpp/msvc/emd.vcxproj
+++ b/cpp/msvc/emd.vcxproj
@@ -90,14 +90,16 @@
     <ClCompile Include="..\DataReader.cpp" />
     <ClCompile Include="..\DataWriter.cpp" />
     <ClCompile Include="..\emd.cpp" />
+    <ClCompile Include="..\filter.cpp" />
     <ClCompile Include="..\helpers\diff.cpp" />
     <ClCompile Include="..\helpers\Spline.cpp" />
-    <ClCompile Include="..\spline_test.cpp" />
+    <ClCompile Include="..\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\DataReader.h" />
     <ClInclude Include="..\DataWriter.h" />
     <ClInclude Include="..\emd.h" />
+    <ClInclude Include="..\filter.h" />
     <ClInclude Include="..\helpers\diff.h" />
     <ClInclude Include="..\helpers\Spline.h" />
   </ItemGroup>
