--- a/cpp/msvc/emd.vcxproj.filters
+++ b/cpp/msvc/emd.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Source Files\helpers">
       <UniqueIdentifier>{e8b68e7a-291f-4dcf-8766-593ff9e83645}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\matio">
+      <UniqueIdentifier>{8ab16fab-39ee-4156-bc3e-e47024f222c1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\DataReader.cpp">
@@ -24,20 +27,50 @@
     <ClCompile Include="..\emd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\DataWriter.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\helpers\Spline.cpp">
       <Filter>Source Files\helpers</Filter>
     </ClCompile>
     <ClCompile Include="..\helpers\diff.cpp">
       <Filter>Source Files\helpers</Filter>
     </ClCompile>
-    <ClCompile Include="..\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\filter.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\spline_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\endian.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\inflate.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\io.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\mat.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\mat4.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\mat5.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\mat73.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\matvar_cell.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\matvar_struct.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\read_data.c">
+      <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\matio\src\snprintf.c">
+      <Filter>Source Files\matio</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +91,27 @@
     </ClInclude>
     <ClInclude Include="..\filter.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\matio\src\mat4.h">
+      <Filter>Source Files\matio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\matio\src\mat5.h">
+      <Filter>Source Files\matio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\matio\src\mat73.h">
+      <Filter>Source Files\matio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\matio\src\matio.h">
+      <Filter>Source Files\matio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\matio\src\matioConfig.h">
+      <Filter>Source Files\matio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\matio\src\matio_private.h">
+      <Filter>Source Files\matio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\matio\src\matio_pubconf.h">
+      <Filter>Source Files\matio</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
