--- a/cpp/msvc/emd.vcxproj.filters
+++ b/cpp/msvc/emd.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClCompile Include="..\filter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\spline_test.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\matio\src\endian.c">
       <Filter>Source Files\matio</Filter>
     </ClCompile>
@@ -71,6 +68,9 @@
     </ClCompile>
     <ClCompile Include="..\matio\src\snprintf.c">
       <Filter>Source Files\matio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\main.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
