--- a/cpp/msvc/emd.vcxproj.filters
+++ b/cpp/msvc/emd.vcxproj.filters
@@ -69,7 +69,7 @@
     <ClCompile Include="..\matio\src\snprintf.c">
       <Filter>Source Files\matio</Filter>
     </ClCompile>
-    <ClCompile Include="..\spline_test.cpp">
+    <ClCompile Include="..\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -109,6 +109,9 @@
     </ClInclude>
     <ClInclude Include="..\matio\src\matio_pubconf.h">
       <Filter>Source Files\matio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\filter.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
