--- a/cpp/msvc/emd.vcxproj
+++ b/cpp/msvc/emd.vcxproj
@@ -89,8 +89,8 @@
     <ClCompile Include="..\emd.cpp" />
     <ClCompile Include="..\filter.cpp" />
     <ClCompile Include="..\helpers\diff.cpp" />
+    <ClCompile Include="..\helpers\FindExtremum.cpp" />
     <ClCompile Include="..\helpers\Spline.cpp" />
-    <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\matio\src\endian.c" />
     <ClCompile Include="..\matio\src\inflate.c" />
     <ClCompile Include="..\matio\src\io.c" />
@@ -102,6 +102,7 @@
     <ClCompile Include="..\matio\src\matvar_struct.c" />
     <ClCompile Include="..\matio\src\read_data.c" />
     <ClCompile Include="..\matio\src\snprintf.c" />
+    <ClCompile Include="..\spline_test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\DataReader.h" />
@@ -109,6 +110,7 @@
     <ClInclude Include="..\emd.h" />
     <ClInclude Include="..\filter.h" />
     <ClInclude Include="..\helpers\diff.h" />
+    <ClInclude Include="..\helpers\FindExtremum.h" />
     <ClInclude Include="..\helpers\Spline.h" />
     <ClInclude Include="..\matio\src\mat4.h" />
     <ClInclude Include="..\matio\src\mat5.h" />
