--- a/cpp/msvc/emd.vcxproj.filters
+++ b/cpp/msvc/emd.vcxproj.filters
@@ -72,7 +72,7 @@
     <ClCompile Include="..\helpers\FindExtremum.cpp">
       <Filter>Source Files\helpers</Filter>
     </ClCompile>
-    <ClCompile Include="..\spline_test.cpp">
+    <ClCompile Include="..\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
