--- a/cpp/msvc/emd.vcxproj
+++ b/cpp/msvc/emd.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="..\helpers\diff.cpp" />
     <ClCompile Include="..\helpers\FindExtremum.cpp" />
     <ClCompile Include="..\helpers\Spline.cpp" />
+    <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\matio\src\endian.c" />
     <ClCompile Include="..\matio\src\inflate.c" />
     <ClCompile Include="..\matio\src\io.c" />
@@ -102,7 +103,6 @@
     <ClCompile Include="..\matio\src\matvar_struct.c" />
     <ClCompile Include="..\matio\src\read_data.c" />
     <ClCompile Include="..\matio\src\snprintf.c" />
-    <ClCompile Include="..\spline_test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\DataReader.h" />
