--- a/cpp/msvc/emd.vcxproj.filters
+++ b/cpp/msvc/emd.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Source Files\matio">
       <UniqueIdentifier>{8ab16fab-39ee-4156-bc3e-e47024f222c1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\alglib">
+      <UniqueIdentifier>{24d4eb4e-1b20-4a13-8c5d-0c7179eeac61}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\DataReader.cpp">
@@ -75,6 +78,45 @@
     <ClCompile Include="..\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\alglib\alglibinternal.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\alglibmisc.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\ap.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\dataanalysis.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\diffequations.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\fasttransforms.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\integration.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\interpolation.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\linalg.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\optimization.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\solvers.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\specialfunctions.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\alglib\statistics.cpp">
+      <Filter>Source Files\alglib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\DataReader.h">
@@ -118,6 +160,48 @@
     </ClInclude>
     <ClInclude Include="..\helpers\FindExtremum.h">
       <Filter>Source Files\helpers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\alglibinternal.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\alglibmisc.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\ap.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\dataanalysis.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\diffequations.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\fasttransforms.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\integration.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\interpolation.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\linalg.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\optimization.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\solvers.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\specialfunctions.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\statistics.h">
+      <Filter>Source Files\alglib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\alglib\stdafx.h">
+      <Filter>Source Files\alglib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
