--- a/cpp/msvc/emd.vcxproj
+++ b/cpp/msvc/emd.vcxproj
@@ -55,7 +55,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_CRT_NONSTDC_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\helpers;$(SolutionDir)..\eigen;$(SolutionDir)..\matio\src;$(SolutionDir)..\wfdb\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..;$(SolutionDir)..\eigen;$(SolutionDir)..\matio\src;$(SolutionDir)..\wfdb\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -73,7 +73,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_CRT_NONSTDC_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\helpers;$(SolutionDir)..\eigen;$(SolutionDir)..\matio\src;$(SolutionDir)..\wfdb\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..;$(SolutionDir)..\eigen;$(SolutionDir)..\matio\src;$(SolutionDir)..\wfdb\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -85,6 +85,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\alglib\alglibinternal.cpp" />
+    <ClCompile Include="..\alglib\alglibmisc.cpp" />
+    <ClCompile Include="..\alglib\ap.cpp" />
+    <ClCompile Include="..\alglib\dataanalysis.cpp" />
+    <ClCompile Include="..\alglib\diffequations.cpp" />
+    <ClCompile Include="..\alglib\fasttransforms.cpp" />
+    <ClCompile Include="..\alglib\integration.cpp" />
+    <ClCompile Include="..\alglib\interpolation.cpp" />
+    <ClCompile Include="..\alglib\linalg.cpp" />
+    <ClCompile Include="..\alglib\optimization.cpp" />
+    <ClCompile Include="..\alglib\solvers.cpp" />
+    <ClCompile Include="..\alglib\specialfunctions.cpp" />
+    <ClCompile Include="..\alglib\statistics.cpp" />
     <ClCompile Include="..\DataReader.cpp" />
     <ClCompile Include="..\emd.cpp" />
     <ClCompile Include="..\filter.cpp" />
@@ -105,6 +118,20 @@
     <ClCompile Include="..\matio\src\snprintf.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\alglib\alglibinternal.h" />
+    <ClInclude Include="..\alglib\alglibmisc.h" />
+    <ClInclude Include="..\alglib\ap.h" />
+    <ClInclude Include="..\alglib\dataanalysis.h" />
+    <ClInclude Include="..\alglib\diffequations.h" />
+    <ClInclude Include="..\alglib\fasttransforms.h" />
+    <ClInclude Include="..\alglib\integration.h" />
+    <ClInclude Include="..\alglib\interpolation.h" />
+    <ClInclude Include="..\alglib\linalg.h" />
+    <ClInclude Include="..\alglib\optimization.h" />
+    <ClInclude Include="..\alglib\solvers.h" />
+    <ClInclude Include="..\alglib\specialfunctions.h" />
+    <ClInclude Include="..\alglib\statistics.h" />
+    <ClInclude Include="..\alglib\stdafx.h" />
     <ClInclude Include="..\DataReader.h" />
     <ClInclude Include="..\DataWriter.h" />
     <ClInclude Include="..\emd.h" />
